--- a/Authentication/backend/.env
+++ b/Authentication/backend/.env
@@ -1,2 +1,2 @@
-CONNECTION_STRING=mongodb+srv://dogacan:mustafa670@crud.hizbl.mongodb.net/mern-auth?retryWrites=true&w=majority
+CONNECTION_STRING=mongodb+srv://dogacan:<password>@crud.hizbl.mongodb.net/<dbname>?retryWrites=true&w=majority
 JWT_SECRET="1A6SFD5G415TG25DF1GRGH1ERSG15DS5F"
