--- a/Exercise_Tracker/backend/.env
+++ b/Exercise_Tracker/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI= mongodb+srv://dogacan:mustafa670@crud.hizbl.mongodb.net/exercise?retryWrites=true&w=majority
+ATLAS_URI= mongodb+srv://dogacan:<password>@crud.hizbl.mongodb.net/<dbname>?retryWrites=true&w=majority
